feat: added validation in swaggerDocumentation | fix: changed 'denied' to 'rejected' in patchTransfer
