# docs/swaggerDocumentation.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: 'API Documentation - RevoU Week 10'
   version: '1.0'
-  description: 'For transfer from user to other user. Middleware, authentication, and authorization assignment.'
+  description: 'Back-end API for transfering money from user to other user. Middleware, authentication, and authorization assignment.'
 servers:
   - url: http://localhost:3000/api/v1
     description: 'Local development server'
@@ -23,10 +23,17 @@ components:
       properties:
         username:
           type: string
+          minLength: 1
         role:
           type: string
+          enum:
+            - maker
+            - approver
+            - admin
         password:
           type: string
+          minLength: 8
+          pattern: "^[a-zA-Z0-9]+$"
       example:
         username: maker123
         role: maker
@@ -137,19 +144,29 @@ paths:
         - bearer: []
       summary: Update Transfer Request
       operationId: updateTransferRequest
+      parameters:        # Add the parameter here
+        - name: transactionId
+          in: path        # Parameter is in the path
+          description: ID of the transaction to be updated
+          required: true
+          schema:
+            type: string   # Change the type to match the actual type of the transaction ID
       requestBody:
         description: Transfer update data
         required: true
         content:
           text/plain:
             schema:
-              type: string
+              type: object
+              properties:
+                status:
+                  type: string
+                  enum:
+                    - approved
+                    - rejected
               example: |
-                // Role: admin (advanced), maker (standard), approver (beneath admin)
-
                 {
-                    "transaction_id": "",
-                    "status": ""
+                    "status": "pending"
                 }
       responses:
         '200':
@@ -159,6 +176,13 @@ paths:
         - bearer: []
       summary: Delete Transfer Request
       operationId: deleteTransferRequest
+      parameters:          
+        - name: transactionId
+          in: path
+          description: ID of the transaction to be deleted
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: Transfer request deleted
